--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 		<spring-cloud.version>Finchley.BUILD-SNAPSHOT</spring-cloud.version>
-
+                <start-class>com.example.demo.SpringCloudStreamTestApplication</start-class>
 	</properties>
 
 	<dependencies>
@@ -69,7 +69,11 @@
 			<artifactId>jackson-module-scala_2.10</artifactId>
 			<version>2.9.5</version>
 		</dependency>
-
+<dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-bundle</artifactId>
+			<version>1.17.1</version>
+		</dependency>
 
 	</dependencies>
 
